--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/css/style.css
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/css/style.css
@@ -9,6 +9,17 @@ Text {
     -fx-font-weight: bold;
 }
 
+ComboBox {
+    -fx-pref-width: 105px;
+    -fx-pref-height: 40px;
+    -fx-font-size: 14px;
+    -fx-background-color: #f0a500;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-background-radius: 10;
+    -fx-effect: dropshadow(gaussian, grey, 5, 0.5, 2, 2);
+}
+
 .text-field, .password-field {
     -fx-pref-height: 30px;
     -fx-pref-width: 220px;
