--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -13,17 +14,18 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <ComboBox fx:id="comboIdioma" onAction="#cambiarIdioma" prefWidth="150.0" promptText="Idioma" />
    <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@img/icon.png" />
       </image>
    </ImageView>
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" />
+   <Text fx:id="textUsuario" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" />
    <TextField fx:id="textFieldUsuario" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" promptText="Introducir Usuario" />
-   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+   <Text fx:id="textContrasenia" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña" />
    <PasswordField fx:id="textFieldPassword" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" promptText="Introducir Password" />
     <Button fx:id="openAceptarButton" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" onAction="#onLoginButtonClick" prefHeight="32.0" prefWidth="110.0" text="Aceptar" textAlignment="CENTER" />
-    <Button fx:id="openRegistrarButton" alignment="CENTER" contentDisplay="TOP" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="25.0" prefWidth="115.0" text="Registrar" textAlignment="CENTER"/>
+    <Button fx:id="openRegistrarButton" alignment="CENTER" contentDisplay="TOP" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#openRegistrarClick" prefHeight="25.0" prefWidth="115.0" text="Registrar" textAlignment="CENTER" />
    <Button fx:id="buttonRecuperarContrasenia" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openRecuperarContraseniaClick" prefHeight="34.0" prefWidth="167.0" text="Recuperar Contraseña" />
    <Text fx:id="textMensaje" strokeType="OUTSIDE" strokeWidth="0.0" />
 </VBox>
