updating app-registro-fx

--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/login.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/login.fxml
@@ -14,7 +14,7 @@
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-   <ComboBox fx:id="comboIdioma" onAction="#cambiarIdioma" prefWidth="150.0" promptText="Idioma" />
+   <ComboBox fx:id="comboIdioma" onAction="#seleccionarIdiomaClick" prefWidth="150.0" promptText="Idioma" />
    <ImageView fitHeight="120.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@img/icon.png" />
