--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/profile.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/profile.fxml
@@ -12,13 +12,13 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" />
+      <Text fx:id="textUsuario" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" />
       <TextField fx:id="textFieldUsuario" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" />
-      <Text layoutX="140.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+      <Text fx:id="textContrasenia" layoutX="140.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña" />
       <PasswordField fx:id="textFieldPassword" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" />
-      <Text layoutX="135.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" />
+      <Text fx:id="textNombre" layoutX="135.0" layoutY="124.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" />
       <TextField fx:id="textFieldNombre" editable="false" layoutX="60.0" layoutY="66.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" />
-      <Text layoutX="138.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
+      <Text fx:id="textEmail" layoutX="138.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Correo Electrónico" />
       <TextField fx:id="textFieldEmail" editable="false" layoutX="60.0" layoutY="230.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" />
       <Button fx:id="buttonVolverAtras" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onVolverAtrasClick" prefHeight="32.0" prefWidth="110.0" text="Volver Atrás" />
    </children>
