--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/password.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/password.fxml
@@ -20,7 +20,8 @@
       </ImageView>
       <Text fx:id="textEmail" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
       <TextField fx:id="textFieldEmail" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="200.0" promptText="Introducir Correo Electrónico" />
-      <Button fx:id="openAceptarButton" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onPasswordButtonClick" prefHeight="32.0" prefWidth="110.0" text="Aceptar" />
       <Text fx:id="textMensaje" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Button fx:id="openAceptarButton" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#onPasswordButtonClick" prefHeight="32.0" prefWidth="110.0" text="Aceptar" />
+      <Button fx:id="buttonVolverAtras" mnemonicParsing="false" onAction="#onVolverAtrasClick" prefHeight="32.0" prefWidth="110.0" text="Volver Atrás" />
    </children>
 </VBox>
