--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/usuarios.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/usuarios.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" prefHeight="700.0" prefWidth="325.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.UsuariosController">
+<VBox alignment="CENTER" prefHeight="770.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.UsuariosController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -21,7 +21,7 @@
          </children>
       </HBox>
         <Text fx:id="textMensaje" strokeType="OUTSIDE" strokeWidth="0.0" />
-        <ListView fx:id="listViewUsuarios" prefHeight="400.0" prefWidth="301.0" />
+        <ListView fx:id="listViewUsuarios" onMouseClicked="#onMouseClicked" prefHeight="400.0" prefWidth="301.0" />
         <Button fx:id="buttonVolverAtras" mnemonicParsing="false" onAction="#onVolverAtrasClick" prefHeight="32.0" prefWidth="110.0" text="Volver Atrás" />
     </children>
 </VBox>
