--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/juego.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/juego.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,18 +12,37 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.JuegoController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.JuegoController">
    <children>
-      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="107.0" prefWidth="452.0">
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="96.0" prefWidth="332.0">
          <children>
-            <Text fx:id="textUsuarioMostrar" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario: " wrappingWidth="170.0">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <HBox.margin>
-                  <Insets top="-50.0" />
-               </HBox.margin>
-            </Text>
+            <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="96.0" prefWidth="171.0">
+               <children>
+                  <Text fx:id="textUsuarioMostrar" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario: " wrappingWidth="210.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="textNivel" strokeType="OUTSIDE" strokeWidth="0.0" text="Nivel: " wrappingWidth="210.0">
+                     <VBox.margin>
+                        <Insets right="125.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="textPuntos" strokeType="OUTSIDE" strokeWidth="0.0" text="Puntos:" wrappingWidth="210.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="textVictorias" strokeType="OUTSIDE" strokeWidth="0.0" text="Victorias:" wrappingWidth="210.0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Text>
+               </children>
+            </VBox>
             <ImageView fitHeight="79.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@img/usuario.png" />
@@ -36,30 +56,28 @@
             <Insets top="20.0" />
          </VBox.margin>
       </HBox>
-      <Button fx:id="puntosButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onVerEstadisticasClick" prefHeight="25.0" prefWidth="80.0" scaleZ="0.0" text="Puntos" translateX="-45.0" translateY="-40.0">
+      <Button fx:id="tiendaButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onComprarClick" prefHeight="25.0" prefWidth="80.0" scaleZ="0.0" text="Tienda" translateX="-45.0" translateY="-35.0">
          <VBox.margin>
             <Insets left="320.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <Text fx:id="textNivel" strokeType="OUTSIDE" strokeWidth="0.0" text="Nivel: " translateX="-3.0" translateY="-70.0" wrappingWidth="177.40380859375">
-         <VBox.margin>
-            <Insets right="125.0" top="-70.0" />
-         </VBox.margin>
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Text>
-      <Canvas fx:id="ahorcadoCanvas" height="223.0" width="285.0">
+      <ProgressBar prefHeight="25.0" prefWidth="60.0" progress="0.0" translateX="-125.0" translateY="-55.0" />
+      <Canvas fx:id="ahorcadoCanvas" height="204.0" translateY="-60.0" width="285.0">
          <VBox.margin>
             <Insets />
          </VBox.margin>
       </Canvas>
-      <Text fx:id="textIntentos" strokeType="OUTSIDE" strokeWidth="0.0" text="Intentos: " wrappingWidth="305.0">
+      <Text fx:id="textLetrasUsadas" layoutX="33.0" layoutY="448.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Letras Usadas: " translateY="-70.0" wrappingWidth="305.0">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="305.0" spacing="10">
+      <Text fx:id="textIntentos" strokeType="OUTSIDE" strokeWidth="0.0" text="Intentos: " translateY="-90.0" wrappingWidth="305.0">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Text>
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="305.0" spacing="10" translateY="-110.0">
          <children>
             <Text text="Palabra:" wrappingWidth="74.431640625">
                <font>
@@ -73,25 +91,22 @@
             </Text>
          </children>
       </HBox>
-      <Text fx:id="textMensaje" strokeType="OUTSIDE" strokeWidth="0.0">
-         <VBox.margin>
-            <Insets top="-10.0" />
-         </VBox.margin>
+      <Text fx:id="textMensaje" strokeType="OUTSIDE" strokeWidth="0.0" translateY="-120.0">
          <font>
             <Font size="16.0" />
          </font>
       </Text>
-      <TextField fx:id="textFieldLetra" alignment="CENTER" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="57.0" promptText="Introduce una Letra">
+      <TextField fx:id="textFieldLetra" alignment="CENTER" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="57.0" promptText="Introduce una Letra" translateY="-120.0">
          <font>
             <Font size="15.0" />
          </font>
       </TextField>
-      <Button fx:id="insertarButton" mnemonicParsing="false" onAction="#onInsertarClick" prefHeight="27.0" prefWidth="57.0" text="Insertar" />
-      <Button fx:id="reiniciarButton" mnemonicParsing="false" onAction="#onReiniciarClick" text="Reiniciar">
+      <Button fx:id="insertarButton" mnemonicParsing="false" onAction="#onInsertarClick" prefHeight="27.0" prefWidth="57.0" text="Insertar" translateY="-120.0" />
+      <Button fx:id="reiniciarButton" mnemonicParsing="false" onAction="#onReiniciarClick" text="Reiniciar" translateY="-120.0">
          <VBox.margin>
             <Insets />
          </VBox.margin>
       </Button>
-      <Button fx:id="buttonVolverAtras" mnemonicParsing="false" onAction="#onVolverAtrasClick" text="Volver Atrás" />
+      <Button fx:id="buttonVolverAtras" mnemonicParsing="false" onAction="#onVolverAtrasClick" text="Volver Atrás" translateY="-120.0" />
    </children>
 </VBox>
