--- a/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/juego.fxml
+++ b/homeworks/app-registro-fx/src/main/resources/es/ies/puerto/juego.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.JuegoController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="770.0" prefWidth="350.0" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ies.puerto.controller.JuegoController">
    <children>
       <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="96.0" prefWidth="332.0">
          <children>
@@ -61,8 +60,7 @@
             <Insets left="320.0" top="10.0" />
          </VBox.margin>
       </Button>
-      <ProgressBar prefHeight="25.0" prefWidth="60.0" progress="0.0" translateX="-125.0" translateY="-55.0" />
-      <Canvas fx:id="ahorcadoCanvas" height="204.0" translateY="-60.0" width="285.0">
+      <Canvas fx:id="ahorcadoCanvas" height="276.0" translateY="-60.0" width="285.0">
          <VBox.margin>
             <Insets />
          </VBox.margin>
@@ -77,9 +75,9 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Text>
-      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="24.0" prefWidth="305.0" spacing="10" translateY="-110.0">
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="324.0" spacing="10" translateY="-110.0">
          <children>
-            <Text text="Palabra:" wrappingWidth="74.431640625">
+            <Text text="Palabra:" translateX="6.0" wrappingWidth="87.15893602371216">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
